--- a/app/app-18.html
+++ b/app/app-18.html
@@ -1,4 +1,4 @@
-<div id="app-18" class="input-choice input-drop-down-choice" data-title="Veuillez préciser le montant approximatif de votre facture d'électricité" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="confirmer" data-button_right_type="button-primary-special-private" data-progress="85" data-evident_next_page="">
+<div id="app-18" class="input-choice input-drop-down-choice" data-title="Veuillez préciser le montant approximatif de votre facture d'électricité" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="confirmer" data-button_right_type="button-primary-special-private" data-progress="85" data-evident_next_page="19">
     <ul class="choices-box">
         <form class="input-drop-down-form" id="facture-form" action="" >
             <div class="input-box input-drop-down-box">
