--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mêco | Réaliser mon projet</title>
+    <title>Meeco | Réaliser mon projet</title>
+    <link rel="shortcut icon" href="../images/logo/meeco-favicon.svg" type="image/svg">
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="../css/colors.css">
     <link rel="stylesheet" href="../css/nav.css">
@@ -15,50 +16,52 @@
 <nav id="navigation-bar" class="navigation-bar">
     <div id="content-box-nav">
         <a id="logo-nav-link" href="../index.html" target="_blank" tabindex="0" aria-label="Acceuil" onfocus="drop_down_services_out()">
-            <svg version="1.1" id="logo-nav" aria-label="Mêco logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-            viewBox="0 0 1400 500" style="enable-background:new 0 0 1400 500;" xml:space="preserve">
+            <svg version="1.1" id="logo-nav" aria-label="Meeco logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            viewBox="0 0 1600 500" style="enable-background:new 0 0 1600 500;" xml:space="preserve">
                 <style type="text/css">
                     .letter {fill:#333333;}
                     .chapeau {fill:#3333ff;}
-                    #letter-e {
-                        transform-origin: 48.016642857142857142857142857143% 63.95634%;
-                        transition: transform 0.3s;
+                    #e-1 {
+                        transform-origin: 39.210925% 63.95634%;
+                        transition: transform 0.5s;
                     }
-
-                    #logo-nav {
-                        transition: box-shadow 0.2s;
-                    }
-
-                    #logo-nav:hover #letter-e {
+                    #logo-nav:hover #e-1 {
                         transform: rotateZ(45deg);
-                        transition: transform 0.3s;
+                        transition: transform 0.5s;
+                    }
+                    #e-2 {
+                        transform-origin: 57.3580625% 63.95634%;
+                        transition: transform 0.5s;
+                    }
+                    #logo-nav:hover #e-2 {
+                        transform: rotateZ(-45deg);
+                        transition: transform 0.5s;
                     }
                     #chapeau {
-                        transition: transform 0.3s;
+                        transition: transform 0.5s;
                     }
                     #logo-nav:hover #chapeau {
                         transform: translateY(-7%);
-                        transition: transform 0.3s;
+                        transition: transform 0.5s;
                     }
                 </style>
-                <g id="Layer">
-                    <g id="mêco-original">
-                        <path class="letter" d="M1207.4,199.8c-66.3,0-120,53.7-120,120s53.7,120,120,120s120-53.7,120-120l0,0
-                            C1327.4,253.5,1273.7,199.8,1207.4,199.8z M1207.4,389.8c-38.7,0-70-31.3-70-70s31.3-70,70-70s70,31.3,70,70l0,0
-                            C1277.4,358.4,1246.1,389.8,1207.4,389.8z"/>
-                        <path class="letter" d="M962.6,389.8c-38.7,0-70-31.3-70-70c0-38.7,31.3-70,70-70c18.6,0,36.4,7.4,49.5,20.5l35.3-35.3
-                            c-46.9-46.9-122.8-46.9-169.7,0s-46.9,122.8,0,169.7c46.9,46.9,122.8,46.9,169.7,0c0,0,0,0,0,0l-35.3-35.4
-                            C999,382.4,981.1,389.8,962.6,389.8z"/>
-                        <path id="letter-e" class="letter" d="M772.9,254.5c-36.1-55.6-110.4-71.4-166-35.3c-55.6,36.1-71.4,110.4-35.3,166
-                            s110.4,71.4,166,35.3c34.1-22.1,54.7-60,54.7-100.7h-50c0,38.7-31.3,70-70,70c-9.9,0-19.6-2.1-28.6-6.1L772.9,254.5z
-                                M622.7,270.3c20.5-20.5,51.6-26.3,78.1-14.4l-92.5,92.5C596.5,321.8,602.2,290.8,622.7,270.3z"/>
-                        <path class="letter" d="M502.6,319.8v120h-50v-120c0-38.7-31.3-70-70-70s-70,31.3-70,70v120h-50v-120c0-38.7-31.3-70-70-70
-                            s-70,31.3-70,70v120h-50v-120c0-66.3,53.7-120,120-120c37.2,0,72.3,17.2,95,46.7c40.5-52.5,115.8-62.2,168.3-21.7
-                            C485.3,247.5,502.6,282.6,502.6,319.8z"/>
-                        <polygon id="chapeau" class="chapeau" points="672.2,130.9 721.7,180.4 757.1,145.1 707.6,95.6 672.2,60.2 636.9,95.6 587.4,145.1 
-                            622.7,180.4"/>
-                    </g>
-                </g>
+                <path id="o" class="letter" d="M1452.9,199.8c-66.3,0-120,53.7-120,120s53.7,120,120,120s120-53.7,120-120l0,0
+                    C1572.9,253.5,1519.2,199.8,1452.9,199.8z M1452.9,389.8c-38.7,0-70-31.3-70-70s31.3-70,70-70s70,31.3,70,70l0,0
+                    C1522.9,358.4,1491.6,389.8,1452.9,389.8z"/>
+                <path id="c" class="letter" d="M1208.1,389.8c-38.7,0-70-31.3-70-70c0-38.7,31.3-70,70-70c18.6,0,36.4,7.4,49.5,20.5l35.3-35.3
+                    c-46.9-46.9-122.8-46.9-169.7,0c-46.9,46.9-46.9,122.8,0,169.7s122.8,46.9,169.7,0c0,0,0,0,0,0l-35.3-35.4
+                    C1244.5,382.4,1226.7,389.8,1208.1,389.8z"/>
+                <path id="e-1" class="letter" d="M728.1,254.5c-36.1-55.6-110.4-71.4-166-35.4s-71.4,110.4-35.4,166s110.4,71.4,166,35.4
+                    c34.1-22.1,54.7-60,54.7-100.7h-50c0,38.7-31.3,70-70,70c-9.9,0-19.6-2.1-28.6-6.1L728.1,254.5z M577.9,270.3
+                    c20.5-20.5,51.6-26.3,78.1-14.4l-92.5,92.5C551.6,321.8,557.4,290.8,577.9,270.3z"/>
+                <path id="e-2" class="letter" d="M817.1,254.5c36.1-55.6,110.4-71.4,166-35.4s71.4,110.4,35.4,166c-36.1,55.6-110.4,71.4-166,35.4
+                    c-34.1-22.1-54.7-60-54.7-100.7h50c0,38.7,31.3,70,70,70c9.9,0,19.6-2.1,28.6-6.1L817.1,254.5z M967.3,270.3
+                    c-20.5-20.5-51.6-26.3-78.1-14.4l92.5,92.5C993.5,321.8,987.8,290.8,967.3,270.3z"/>
+                <path id="m" class="letter" d="M457.1,319.8v120h-50v-120c0-38.7-31.3-70-70-70s-70,31.3-70,70v120h-50v-120c0-38.7-31.3-70-70-70
+                    s-70,31.3-70,70v120h-50v-120c0-66.3,53.7-120,120-120c37.2,0,72.3,17.2,95,46.7c40.5-52.5,115.8-62.2,168.3-21.7
+                    C439.8,247.5,457.1,282.6,457.1,319.8z"/>
+                <polygon id="chapeau" class="chapeau" points="772.6,130.9 822.1,180.4 857.4,145.1 807.9,95.6 772.6,60.2 737.2,95.6 687.7,145.1 
+                    723.1,180.4 "/>
             </svg>
         </a>
     </div>
