--- a/chauffage/index.html
+++ b/chauffage/index.html
@@ -69,7 +69,7 @@
                     723.1,180.4 "/>
             </svg>
         </a>
-        <a id="icon-nav-link" href="#" tabindex="0" aria-acceuil="">
+        <a id="icon-nav-link" href="../" tabindex="0" aria-acceuil="">
             <img id="icon-nav" src="../images/logo/meeco-icon-original.svg" alt="icon meeco"/>
         </a>
         <svg version="1.1" id="burger" onclick="toggle_menu();" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
