--- a/contact/index.html
+++ b/contact/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meeco | Qui sommes nous?</title>
+    <title>Meeco | Contacter nous</title>
     <link rel="shortcut icon" href="../images/logo/meeco-favicon.svg" type="image/svg">
     <link rel="stylesheet" href="../css/fonts.css">
     <link rel="stylesheet" href="../css/colors.css">
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../css/sections(1100).css">
     <link rel="stylesheet" href="../css/contact.css">
 </head>
-<body onscroll="scrollfunction();" id="page-about" class="page">
+<body onscroll="scrollfunction();" id="page-contact" class="page">
 <nav id="navigation-bar" class="navigation-bar">
     <div id="content-box-nav">
         <a id="logo-nav-link" href="../" tabindex="0" aria-label="Acceuil" onfocus="drop_down_services_out()">
@@ -149,8 +149,19 @@
                 <div id="contact-form-submit-box"><input type="submit" id="contact-form-submit" value="Envoyer" class="text-button button button-primary-special-private" tabindex="0" aria-label="Envoyer"></div>
             </form>
         </div>
-        <div id="map-sub-section">
-            <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d167998.10803373053!2d2.206977064368058!3d48.858774103123785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e2964e34e2d%3A0x8ddca9ee380ef7e0!2sTour%20Eiffel!5e0!3m2!1sfr!2sma!4v1612794821510!5m2!1sfr!2sma" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <div id="info-sub-section">
+            <h2 id="info-title" class="text-small-header section-title">Nos coordonnées</h2>
+            <address id="contact-info" class="text-min-body">
+                <span class="contact-info-label">N° de téléphone:</span>
+                <a href="tel:+33612345678" class="link">06 12 34 56 78</a>
+                <br/>
+                <span class="contact-info-label">Email:</span>
+                <a href="mailto:contact@meeco.fr" class="link">contact@meeco.fr</a>
+                <br/>
+                <span class="contact-info-label">Adresse:</span>
+                <a href="https://goo.gl/maps/jFEHt5E997pehcsH7" target="_blank" class="link">Champ de Mars, 5 Avenue Anatole France, 75007 Paris, France.</a>
+            </address>
+            <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d167998.10803373053!2d2.206977064368058!3d48.858774103123785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e2964e34e2d%3A0x8ddca9ee380ef7e0!2sTour%20Eiffel!5e0!3m2!1sfr!2sma!4v1612794821510!5m2!1sfr!2sma" frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
     </div>
 </section>
