--- a/index.html
+++ b/index.html
@@ -282,14 +282,13 @@
     <div id="content-box-footer" class="content-box-page-section">
         <img id="logo-footer" src="images/logo/meeco-white.svg" alt="logo Meeco blanc"/>
         <ul id="footer-list">
-            <li><a href="#" class="important-link text-footer" target="_blank" area-label="Mentions légales" tabindex="0">Mentions légales</a></li>
-            <li><a href="#" class="important-link text-footer" target="_blank" area-label="Politique de la vie privée" tabindex="0">Politique de la vie privée</a></li>
+            <li><a href="./cgu/#informations-legales" class="important-link text-footer" target="_blank" area-label="Informations légales" tabindex="0">Informations légales</a></li>
+            <li><a href="./cgu/#rgdp" class="important-link text-footer" target="_blank" area-label="Politique de la vie privée" tabindex="0">Politique de la vie privée</a></li>
             <li><a href="./about/" class="important-link text-footer" target="_blank" area-label="Qui sommes nous?" tabindex="0">Qui sommes nous?</a></li>
             <li><a href="./contact/" class="important-link text-footer" target="_blank" area-label="Nous contacter" tabindex="0">Nous contacter</a></li>
         </ul>
         <small id="copyright-notice" class="text-footer">Copyright &copy;2021 <a href="https://solusaas.com" target="_blank" area-label="solusaas" tabindex="0">SOLUSAAS</a></small>
     </div>
-    
 </footer>
 <div id="pattern"></div>
 <script src="scripts/scroll.js"></script>
